--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,6 @@
 		<url-pattern>/collaborateurs/lister</url-pattern>
 	</servlet-mapping>
 	
-	
 	<servlet>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
@@ -26,4 +25,13 @@
 		<url-pattern>/collaborateurs/editer</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>NouveauCollaborateurController</servlet-name>
+		<servlet-class>dev.sgp.web.NouveauCollaborateurController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>NouveauCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/nouveau</url-pattern>
+	</servlet-mapping>
 </web-app>
