--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 			<version>3.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.spec.javax.servlet.jstl</groupId>
+			<artifactId>jboss-jstl-api_1.2_spec</artifactId>
+			<version>1.1.3.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 </project>
