--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,29 +9,45 @@
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<url-pattern>/collaborateurs/lister</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<url-pattern>/collaborateurs/editer</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>NouveauCollaborateurController</servlet-name>
 		<servlet-class>dev.sgp.web.NouveauCollaborateurController</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>NouveauCollaborateurController</servlet-name>
 		<url-pattern>/collaborateurs/nouveau</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>StatistiquesController</servlet-name>
+		<servlet-class>dev.sgp.web.StatistiquesController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>StatistiquesController</servlet-name>
+		<url-pattern>/statistiques</url-pattern>
+	</servlet-mapping>
+
+	<filter>
+		<filter-name>VisiteFilter</filter-name>
+		<filter-class>dev.sgp.filtre.FrequentationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>VisiteFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
