--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.9.0.pr4</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
